David 2 Probo medical/force-app/main/default/objects/WorkOrder/WorkOrder.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>