David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Account_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Email__c</fullName>
    <formula>Account.Accounting_Contact_E_mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Email</label>
    <type>Text</type>
</CustomField>