David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(!ISBLANK(ServiceContract.Account.Name),ServiceContract.Account.Name,
IF(!ISBLANK(AccountId),Account.Name,
IF(!ISBLANK(Account_Name_Free_Text__c), Account_Name_Free_Text__c,
&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>