David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Account_Name_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Free_Text__c</fullName>
    <description>12/16/2025 (BW) - free text Account Name field that is used by technicians to input names without knowing the name of the account</description>
    <label>Account Name (Free Text)</label>
    <length>75</length>
    <type>Text</type>
</CustomField>