David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Account_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Terms__c</fullName>
    <formula>TEXT(Account.Payment_Term__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Payment Terms</label>
    <type>Text</type>
</CustomField>