David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Action_taken_that_will_affect_dose__c.field-meta.xml
<CustomField>
    <fullName>Action_taken_that_will_affect_dose__c</fullName>
    <label>Action taken that will affect dose?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>