David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Actual_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Removal_Date__c</fullName>
    <label>Actual Removal Date</label>
    <type>Date</type>
</CustomField>