David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Additional_Engineers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Engineers__c</fullName>
    <label>Additional Engineers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>