David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/All_chords_and_cables_intact_no_Frays__c.field-meta.xml
<CustomField>
    <fullName>All_chords_and_cables_intact_no_Frays__c</fullName>
    <label>All chords and cables intact (no Frays)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>