David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Allow_Create_Service_Asset_Button__c.field-meta.xml
<CustomField>
    <fullName>Allow_Create_Service_Asset_Button__c</fullName>
    <formula>(WorkTypeId == &quot;08qVA000000249BYAQ&quot; || WorkTypeId == &quot;08qVA000000249B&quot; ||
 WorkTypeId == &quot;08qVA0000003VNRYA2&quot; || WorkTypeId == &quot;08qVA0000003VNR&quot;|| 
WorkTypeId == &quot;08qVA0000002OavYAE&quot; || WorkTypeId == &quot;08qVA0000002Oav&quot;) &amp;&amp;  ISBLANK(AssetId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Create Service Asset Button</label>
    <type>Checkbox</type>
</CustomField>