David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Ask_to_Re_Generate_FSR__c.field-meta.xml
<CustomField>
    <fullName>Ask_to_Re_Generate_FSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ask to Re-Generate FSR</label>
    <type>Checkbox</type>
</CustomField>