David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Asset2__c.field-meta.xml
<CustomField>
    <fullName>Asset2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset2</label>
    <referenceTo>ProductItem__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>