David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Asset_Model__c.field-meta.xml
<CustomField>
    <fullName>Asset_Model__c</fullName>
    <formula>Asset2__r.Product2_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Model</label>
    <type>Text</type>
</CustomField>