David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Serial_Number__c</fullName>
    <formula>Asset2__r.Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Serial Number</label>
    <type>Text</type>
</CustomField>