David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Attn__c.field-meta.xml
<CustomField>
    <fullName>Attn__c</fullName>
    <label>Attn:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>