David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Backup_Preset_and_Network_Settings__c.field-meta.xml
<CustomField>
    <fullName>Backup_Preset_and_Network_Settings__c</fullName>
    <label>Backup Preset and Network Settings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>