David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billable_Contract_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Billable_Contract_Warranty__c</fullName>
    <label>Billable/Contract/Warranty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>