David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billable_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Billable_Work_Order__c</fullName>
    <label>Billable Work Order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>