David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <label>Billing Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>