David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Billing_Street__c &amp; &quot;, &quot; &amp;  Billing_City__c &amp; &quot;, &quot; &amp; Billing_State__c &amp; &quot; &quot; &amp;  Billing_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>