David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billing_Department__c.field-meta.xml
<CustomField>
    <fullName>Billing_Department__c</fullName>
    <formula>Account.Billing_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Department</label>
    <type>Text</type>
</CustomField>