David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Contains the billing type for the Work Order</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Material Only</fullName>
            </value>
            <value>
                <fullName>PM Plus</fullName>
                <isActive>false</isActive>
                <label>PM Plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>