David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>