David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Blind_Ship__c.field-meta.xml
<CustomField>
    <fullName>Blind_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blind Ship</label>
    <type>Checkbox</type>
</CustomField>