David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Block_EQ__c.field-meta.xml
<CustomField>
    <fullName>Block_EQ__c</fullName>
    <label>Block EQ #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>