David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Block_FL__c.field-meta.xml
<CustomField>
    <fullName>Block_FL__c</fullName>
    <label>Block FL#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>