David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Block_SR__c.field-meta.xml
<CustomField>
    <fullName>Block_SR__c</fullName>
    <label>Block SR#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>