David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Booked_With__c.field-meta.xml
<CustomField>
    <fullName>Booked_With__c</fullName>
    <label>Reported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>