David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Booked_With_NEW__c.field-meta.xml
<CustomField>
    <fullName>Booked_With_NEW__c</fullName>
    <label>Booked With</label>
    <length>100</length>
    <type>Text</type>
</CustomField>