David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Burn_user_logs_to_a_CD__c.field-meta.xml
<CustomField>
    <fullName>Burn_user_logs_to_a_CD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Burn user logs to a CD</label>
    <type>Checkbox</type>
</CustomField>