David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Call_booked_with__c.field-meta.xml
<CustomField>
    <fullName>Call_booked_with__c</fullName>
    <label>Call booked with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>