David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_2D_PW_Color_Incl_Angio_Power__c.field-meta.xml
<CustomField>
    <fullName>Check_2D_PW_Color_Incl_Angio_Power__c</fullName>
    <label>Check 2D, PW, Color (Incl. Angio, Power)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>