David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_3D_4D__c.field-meta.xml
<CustomField>
    <fullName>Check_3D_4D__c</fullName>
    <label>Check 3D / 4D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>