David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_Calibrate_power_supplies__c.field-meta.xml
<CustomField>
    <fullName>Check_Calibrate_power_supplies__c</fullName>
    <label>Check / Calibrate power supplies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>