David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_Control_Panel_Keyboard__c.field-meta.xml
<CustomField>
    <fullName>Check_Control_Panel_Keyboard__c</fullName>
    <label>Check Control Panel / Keyboard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>