David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_CW_Doppler__c.field-meta.xml
<CustomField>
    <fullName>Check_CW_Doppler__c</fullName>
    <label>Check CW Doppler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>