David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_ECG_Cable_Signal__c.field-meta.xml
<CustomField>
    <fullName>Check_ECG_Cable_Signal__c</fullName>
    <label>Check ECG Cable / Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>