David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_filter_destruct_fan_assembly__c.field-meta.xml
<CustomField>
    <fullName>Check_filter_destruct_fan_assembly__c</fullName>
    <label>Check filter destruct fan assembly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>