David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_filter_destruct_fan_assembly_Com__c.field-meta.xml
<CustomField>
    <fullName>Check_filter_destruct_fan_assembly_Com__c</fullName>
    <label>Check filter destruct fan assembly Com</label>
    <type>TextArea</type>
</CustomField>