David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_nebulizer_fan_on_assembly__c.field-meta.xml
<CustomField>
    <fullName>Check_nebulizer_fan_on_assembly__c</fullName>
    <label>Check nebulizer fan on assembly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trophon_Form_Options</valueSetName>
    </valueSet>
</CustomField>