David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Check_nebulizer_fan_on_assembly_Com__c.field-meta.xml
<CustomField>
    <fullName>Check_nebulizer_fan_on_assembly_Com__c</fullName>
    <label>Check nebulizer fan on assembly Com</label>
    <type>TextArea</type>
</CustomField>