David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Checked_Basic_measurements__c.field-meta.xml
<CustomField>
    <fullName>Checked_Basic_measurements__c</fullName>
    <label>Checked Basic measurements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>