David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Checklist_Output_HTML_Tables__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Output_HTML_Tables__c</fullName>
    <label>Checklist Output (HTML Tables)</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>