David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Parts</fullName>
            </value>
            <value>
                <fullName>Call Out - Major Fault</fullName>
            </value>
            <value>
                <fullName>Call Out - Recurring Fault</fullName>
            </value>
            <value>
                <fullName>Call Out - Return Visit</fullName>
            </value>
            <value>
                <fullName>Call Out - Routine Fault</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Out for Repair</fullName>
            </value>
            <value>
                <fullName>Pending Customer Authorisation</fullName>
            </value>
            <value>
                <fullName>Pending Customer Response</fullName>
            </value>
            <value>
                <fullName>Pre Inspection Visit</fullName>
            </value>
            <value>
                <fullName>Probe Exchange</fullName>
            </value>
            <value>
                <fullName>Probe Repair</fullName>
            </value>
            <value>
                <fullName>Quote Required</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Sale Preparation</fullName>
            </value>
            <value>
                <fullName>Service Follow Up</fullName>
            </value>
            <value>
                <fullName>System Update</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Tech Support – Recurring fault</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Workshop - Awaiting Parts</fullName>
            </value>
            <value>
                <fullName>Workshop - Pending Arrival</fullName>
            </value>
            <value>
                <fullName>Workshop - Pending Customer Approval</fullName>
            </value>
            <value>
                <fullName>Solved by Tech Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>