David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Clean_and_inspect_system_interior__c.field-meta.xml
<CustomField>
    <fullName>Clean_and_inspect_system_interior__c</fullName>
    <label>Clean and inspect system interior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>