David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Clean_system_monitor_touch_panel__c.field-meta.xml
<CustomField>
    <fullName>Clean_system_monitor_touch_panel__c</fullName>
    <label>Clean system monitor, touch panel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>