David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Clean_trackball__c.field-meta.xml
<CustomField>
    <fullName>Clean_trackball__c</fullName>
    <label>Clean trackball</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_PMR_Form</valueSetName>
    </valueSet>
</CustomField>