David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Close_without_FSR__c.field-meta.xml
<CustomField>
    <fullName>Close_without_FSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close without FSR</label>
    <type>Checkbox</type>
</CustomField>