David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>10/06/2025 (BW) - Used by field technicians to input a company name if no company already exists</description>
    <inlineHelpText>10/06/2025 (BW) - Used by field technicians to input a company name if no company already exists</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>