David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Contract_Line_Item__r.Contact__r.FirstName + &quot; &quot; +  Contract_Line_Item__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>