David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contact_E_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_E_Mail_Address__c</fullName>
    <formula>Contract_Line_Item__r.Contact_E_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact E-Mail Address</label>
    <type>Text</type>
</CustomField>