David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Contact/Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>