David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>Contract_Line_Item__r.Contact_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>