David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contract_Adhoc__c.field-meta.xml
<CustomField>
    <fullName>Contract_Adhoc__c</fullName>
    <label>Contract/Adhoc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>