David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ServiceContractId</field>
            <operation>equals</operation>
            <valueField>ContractLineItem.ServiceContractId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>