David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>ServiceContract.ContractNumber</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>