David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Core_Probe__c.field-meta.xml
<CustomField>
    <fullName>Core_Probe__c</fullName>
    <label>Core Probe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>