David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Core_Probe_Serial__c.field-meta.xml
<CustomField>
    <fullName>Core_Probe_Serial__c</fullName>
    <label>Core Probe Serial#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>