David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Core_System__c.field-meta.xml
<CustomField>
    <fullName>Core_System__c</fullName>
    <label>Core System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>