David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Core_System_Serial_2__c.field-meta.xml
<CustomField>
    <fullName>Core_System_Serial_2__c</fullName>
    <label>Core System Serial#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>