David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Corrective_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Required__c</fullName>
    <label>Corrective Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>