David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <formula>TEXT(Contract_Line_Item__r.Coverage_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Level</label>
    <type>Text</type>
</CustomField>