David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Created_by_EU_UK__c.field-meta.xml
<CustomField>
    <fullName>Created_by_EU_UK__c</fullName>
    <formula>OR(
ISPICKVAL(CreatedBy.Location__c,&quot;Bristol, UK&quot;),
ISPICKVAL(CreatedBy.Location__c,&quot;Dusseldorf, Germany&quot;),
ISPICKVAL(CreatedBy.Location__c,&quot;Gloucester, UK&quot;),
ISPICKVAL(CreatedBy.Location__c,&quot;Nantes, FR&quot;),
ISPICKVAL(CreatedBy.Location__c,&quot;Knowsley, UK&quot;),
ISPICKVAL(CreatedBy.Location__c,&quot;Nottingham, UK&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by EU/UK</label>
    <type>Checkbox</type>
</CustomField>