David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Current_Drive_Strength__c.field-meta.xml
<CustomField>
    <fullName>Current_Drive_Strength__c</fullName>
    <label>Current Drive Strength</label>
    <type>TextArea</type>
</CustomField>