David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Customer_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Number__c</fullName>
    <label>Customer PO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>