David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <label>Customer Reference Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>