David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>