David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Customer_SR__c.field-meta.xml
<CustomField>
    <fullName>Customer_SR__c</fullName>
    <description>Third party or customer specific service/ticket number</description>
    <inlineHelpText>Third party or customer specific service/ticket number</inlineHelpText>
    <label>Customer SR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>