David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Data_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Deletion_Status__c</fullName>
    <label>Data Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mechanical_Services_Site_Checks_Statuses</valueSetName>
    </valueSet>
</CustomField>