David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Date_item_Prepped__c.field-meta.xml
<CustomField>
    <fullName>Date_item_Prepped__c</fullName>
    <label>Date item Prepped</label>
    <type>Date</type>
</CustomField>