David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Date_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manufacture__c</fullName>
    <label>Date of Manufacture</label>
    <length>20</length>
    <type>Text</type>
</CustomField>