David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Date_Probe_Received_for_Repair_Eval__c.field-meta.xml
<CustomField>
    <fullName>Date_Probe_Received_for_Repair_Eval__c</fullName>
    <description>02/20/2026 (BW) - The date the probe was checked-in for repair on the probe repair eval</description>
    <label>Date Probe Received for Repair Eval</label>
    <type>Date</type>
</CustomField>