David 2 Probo medical/force-app/main/default/objects/WorkOrder/fields/Date_Quote_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Quote_Sent_to_Customer__c</fullName>
    <description>05/21/2026 (BW) - Used in Field Service Mobile to keep track of the date that the quote was sent to the customer</description>
    <label>Date Quote Sent to Customer</label>
    <type>Date</type>
</CustomField>